# simple-js-interpreter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp  token.cpp  token.hpp
src/parser/: expression.hpp  parser.cpp  parser.hpp  program.hpp  statement.hpp
test/: CMakeLists.txt  lexer_test.cpp  main_test.cpp  parser_test.cpp
